<resources>
    <string name="app_name">Meal Manager</string>
    <string name="log_in_as_mess_member">Log In As Mess Member</string>
    <string name="members_email">Member\'s Email</string>
    <string name="member_s_password">Member\'s Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password"><u>Forgot Your Password?.</u></string>
    <string name="not_yet_resistered_sign_up">Not Yet registered? Sign Up</string>
    <string name="sign_up_member_s">Sign Up Member\'s</string>
    <string name="member_s_name">Member\'s Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="member_s_email_address_valid">Member\'s Email Address(Valid)</string>
    <string name="member_s_password2">Member\'s Password</string>
    <string name="confirm_member_s_password">Confirm Member\'s Password</string>
    <string name="already_signed_up_log_in">Already Signed Up? Log In</string>
    <string name="if_you_already_know">If You Already Know How To Use Mess Manager,Then Skip This Step</string>
    <string name="how_to_use">How to use</string>
    <string name="skip">SKIP</string>
    <string name="more">MORE</string>
    <string name="oops_something_went_nwrong">Oops! something went\nwrong.</string>
    <string name="check_your_internet_connection">Check your internet\nconnection?try again</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="welcome_to_mess_nmanager">Welcome to Mess\nManager!</string>
    <string name="bangla">ajh;saohj;osajhdoajdoajopdjapodjapjdp[ajdpapdapdjpajdpaj\ndpjapdjapjdpajdpajpdjapdjapjdpajdpajd</string>
    <string name="mess_balance">\ \Mess Balance</string>
    <string name="total_deposit">\ \Total Deposit</string>
    <string name="mess_total_meal_cost">\ \Mess Total Meal Cost</string>
    <string name="mess_total_meal">\ \Mess Total Meal</string>
    <string name="mess_meal_rate">\ \Mess Meal Rate</string>
    <string name="other_cost_per_person">\ \Other Cost Per Person\ </string>
    <string name="total_other_cost">\ \Total Other Cost</string>
    <string name="personal_info">Personal Info</string>
    <string name="my_meal">My Meal</string>
    <string name="my_deposit">My Deposit</string>
    <string name="my_cost">My Cost</string>
    <string name="balance">Balance</string>
    <string name="my_bazar_s_date">My Bazar\'s Date</string>
    <string name="create_your_mess_now">Create Your Mess Now</string>
    <string name="enter_mess_name">Enter Mess Name</string>
    <string name="e_g_abz">e.g. abz</string>
    <string name="enter_new_month_title">Enter New Month Title</string>
    <string name="e_g_feb_2022">e.g. Feb 2022</string>
    <string name="you_are_member_or_manager">You are Member or Manager ?</string>
    <string name="i_am_manager">I am Manager</string>
    <string name="i_am_member">I am Member</string>
    <string name="create_mess_now">Create Mess Now</string>
    <string name="or">-----OR-----</string>
    <string name="join_mess_now">Join Mess Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="member_info">Member Info</string>
    <string name="member_name">Member Name:</string>
    <string name="phone">Phone:\ </string>
    <string name="institution">Institution:\ </string>
    <string name="gender">Gender:\ </string>
    <string name="address">Address:\ </string>
    <string name="preferences">Preferences</string>
    <string name="change_your_information">Change Your Information</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="account_setting">Account Setting</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_member">Add New Member</string>
    <string name="add_existing_user_by_email">Add Existing user By Email</string>
    <string name="create_new_member">Create New Member</string>
    <string name="select_member_s_role">Select member\'s Role</string>
    <string name="manager">Manager</string>
    <string name="member">Member</string>
    <string name="add_in_your_mess">Add In Your Mess</string>
    <string name="add_member_s_money">Add Member\'s Money</string>
    <string name="enter_deposit_amount">Enter Deposit Amount</string>
    <string name="select_member_who_will_deposit">Select Member Who will Deposit</string>
    <string name="rezwan">Rezwan</string>
    <string name="submit">Submit</string>
    <string name="go_to_dashboard">Go To DashBoard</string>
    <string name="added_deposit_info_successfully">Added Deposit Info Successfully</string>
    <string name="add_more_deposit">Add More Deposit</string>
    <string name="add_member_s_meal">Add Member\'s Meal</string>
    <string name="current_default_meal_number">Current Default Meal Number:</string>
    <string name="set_member_s_meal_number">Set Member\'s Meal Number</string>
    <string name="_1">1</string>
    <string name="hypen">-</string>
    <string name="plus">+</string>
    <string name="added_meal_info_successfully">Added Meal Info Successfully</string>
    <string name="add_other_cost">Add other Cost</string>

    <string name="other_cost">Other cost mean which cost is not related to meal, this cost will be divided equally to all members, e.g. Gas Bill, Net Bill etc.</string>
    <string name="others">others amount</string>
    <string name="others_things_name_date_ex_hand_wash_12_sept">Others things name,date(ex.Hand wash 12sept)</string>
    <string name="other_cost_added_successfully">Other Cost Added Successfully</string>
    <string name="select_member_name">Select Member Name</string>
    <string name="remove">Remove</string>
    <string name="select_new_manager">Select New Manager</string>
    <string name="change_manager">Change Manager</string>
    <string name="meal_number">Meal Number :\ </string>
    <string name="deposit">Deposit :\ </string>
    <string name="total_cost">Total Cost :\ </string>
    <string name="balance2">Balance :\ </string>
    <string name="view_mess_settings">View Mess Settings</string>
    <string name="home">Home</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_other_cost">Add other Cost</string>
    <string name="add_meal_cost">Add Meal Cost</string>
    <string name="all_member">All Member</string>
    <string name="options">Options</string>
    <string name="remove_member">Remove Member</string>
    <string name="change_manager">Change Manager</string>
    <string name="start_new_month">Start New Month</string>
    <string name="active_month_details">Active Month Details</string>
    <string name="delete_mess">Delete Mess</string>
    <string name="member_info">Member Info</string>
    <string name="set_bazar_date">Set Bazar Date:\ </string>
    <string name="not_set_yet">NOT SET YET</string>
</resources>