<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_190sdp"
    android:layout_height="@dimen/_140sdp"
    app:cardBackgroundColor="@color/insideBackGroundColor"
    app:cardCornerRadius="@dimen/_15sdp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/oops_something_went_nwrong"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/check_your_internet_connection"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/internetTry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/internetCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>