<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@color/insideBackGroundColor"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/how_to_use"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/if_you_already_know"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tutorialSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tutorialMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/more"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>