<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".ui.SignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/ic_launcher_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_member_s"
        android:textColor="@color/logInText"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.00999999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.04000002">

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/sectorinput"
            android:hint="@string/member_s_name"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/logInText"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_8sdp" />

        <EditText
            android:id="@+id/newUserEmail"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/sectorinput"
            android:hint="@string/member_s_email_address_valid"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/logInText"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_8sdp" />

        <EditText
            android:id="@+id/newUserPass"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/sectorinput"
            android:hint="@string/member_s_password2"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/logInText"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_8sdp" />

        <EditText
            android:id="@+id/newUserConfirmPass"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/sectorinput"
            android:hint="@string/confirm_member_s_password"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/logInText"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_13ssp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/shapeloginbutton"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp" />

        <RelativeLayout
            android:id="@+id/oldUserBtn"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/sectorinput">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/already_signed_up_log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>