<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardBackgroundColor="@color/Background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:text="@string/go_to_dashboard"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_5sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:layout_gravity="center"
            android:text="@string/added_deposit_info_successfully"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_10sdp"/>
        <TextView
            android:layout_gravity="end"
            android:id="@+id/dialogDashBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/go_to_dashboard"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
        <TextView
            android:layout_gravity="end"
            android:id="@+id/dialogDeposit"
            android:padding="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/add_more_deposit"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.cardview.widget.CardView>